--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 markdown: rdiscount
 permalink: /:year/:month/:title/
-author: Allan
+url: http://yihui.name/en
+author: Yihui Xie
 pygments: true
-
 
