--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 markdown: rdiscount
 permalink: /:year/:month/:title/
-url: http://yihui.name/en
-author: Yihui Xie
+author: Allan
 pygments: true
 
