--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-markdown: redcarpet
-permalink: /:year/:month/:title/
+markdown: rdiscount
+permalink: /:year/:month/:title
 author: Allan
 pygments: true
