--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,21 @@
-# UTF-8 & parse errors fix
-markdown: redcarpet
+# Dependencies
+markdown:         redcarpet
+redcarpet:
+  extensions: ["tables"]
+
+pygments:         true
+
+# Permalinks
+permalink:        pretty
+
+# Setup
+title:            Allan
+tagline:          'Data Science, Apache Pig, Hadoop, Blogging, Tweets, Astrophysics'
+url:              http://allanl.com
+shorturl:         allanl.com
+
+author:
+  name:           'Allan'
+  url:            https://twitter.com/YupingLu
+
+paginate:         1
