--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ category_dir: /
 baseurl: /blog
 
 # The URL of your actual domain. This will be used to make absolute links in the RSS feed.
-url: http://blog.yupinglu.me/
+url: http://blog.yupinglu.me
 
 #### Under the Hood Stuff #####
 
